--- a/main.html
+++ b/main.html
@@ -17,12 +17,11 @@
     <a href="#" class="btn btn-primary bg*">Read more</a>
   </div>
 </div>
-	<br>
 <div class="card-group">
 <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
   <div class="card-header">Alert</div>
   <div class="card-body">
-    <h5 class="card-title">Node Dead</h5>
+    <h5 class="card-deck card-title">Node Dead</h5>
     <p class="card-text">Node 5 (east-us) is offline for last 12 days.</p>
   </div>
 </div>
